--- a/app/views/crea-modifica-post.xml
+++ b/app/views/crea-modifica-post.xml
@@ -1,6 +1,6 @@
 <Alloy>
 
-	<Window id="win" title="Crea/Modifica" class="container" onOpen="openEvent">
+	<Window id="win" title="Crea/Modifica" class="container" onOpen="openEvent" onClose="resetShortcut">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
