--- a/app/views/newPost.xml
+++ b/app/views/newPost.xml
@@ -31,7 +31,7 @@
 						<ImageView id="takePicIcon"/>
 						<Label id="takePicText"/>
 					</View>
-					<View id="gallery">
+					<View id="gallery" onClick="openGallery">
 						<ImageView id="galleryPicIcon"/>
 						<Label id="galleryPicText"/>
 						<Label id="verticalBar"/>
