--- a/app/views/rowCASHFLOW.xml
+++ b/app/views/rowCASHFLOW.xml
@@ -1,44 +1,6 @@
-<!--<Alloy>
-<TableViewRow id="row">
-<Label id="description"/>
-<View class="block_container" layout="horizontal">
-<Label class="block_label" text="Importo: ">
-<Label class="block_data" id="importo"/>
-</View>
-<View class="block_container" layout="horizontal">
-<Label class="block_label" text="Data operazione: ">
-<Label class="block_data" id="dataOperazione"/>
-</View>
-<View class="block_container" layout="horizontal">
-<Label class="block_label" text="Data valuta: ">
-<Label class="block_data" id="dataValuta"/>
-</View>
-<View class="block_container" layout="horizontal">
-<Label class="block_label" text="Tipo movimento: ">
-<Label class="block_data" id="codTipoMovimento"/>
-</View>
-</TableViewRow>
-</Alloy>
-
-<Alloy>
-<TableViewRow id="row">
-
-<View class="block_container" layout="horizontal">
-<Label id="description"/>
-<Label class="block_data" id="importo"/>
-<Label class="block_data" id="dataValuta"/>
-</View>
-<View class="block_container" layout="horizontal">
-<Label class="block_data" id="codTipoMovimento"/>
-
-<Label class="block_data" id="dataOperazione"/>
-</View>
-</TableViewRow>
-</Alloy>-->
-
 <Alloy>
 
-	<TableViewRow class="row">
+	<TableViewRow id="riga" class="row">
 
 		<View class="aspectCashflowContainer">
 			<Label id="cashFlowIcon" class="aspectIcon"/>
