--- a/app/views/rowCASHFLOW.xml
+++ b/app/views/rowCASHFLOW.xml
@@ -1,6 +1,6 @@
 <Alloy>
 
-	<TableViewRow id="riga" class="row">
+	<TableViewRow id="riga" class="row" onClick="edit">
 
 		<View class="aspectCashflowContainer">
 			<Label id="cashFlowIcon" class="aspectIcon"/>
