--- a/app/views/editEvent.xml
+++ b/app/views/editEvent.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="win" class="container" title = "Nuovo Evento">
+	<Window id="win" class="container" title = "Modifica Evento">
 
 		<Menu id="menu" platform="android" onHomeIconItemSelected="homeIconSelected">
 
