--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -15,30 +15,30 @@
 
 				<View id="topWrapper">
 
-					<ImageView id="postIcon" image="Post.catImage"/>
+					<ImageView id="postIcon"/>
 					<View id="innerWrapper">
 						<View id="date_rating">
-							<Label id = "date" text="Post.tmp_referenceTime"/>
+							<Label id = "date"/>
 							<View id = "ratingContainer">
-								<ImageView id="rating_1" class="ratingstars" image="Post.rating_1"/>
-								<ImageView id="rating_2" class="ratingstars" image="Post.rating_2"/>
-								<ImageView id="rating_3" class="ratingstars" image="Post.rating_3"/>
-								<ImageView id="rating_4" class="ratingstars" image="Post.rating_4"/>
-								<ImageView id="rating_5" class="ratingstars" image="Post.rating_5"/>
+								<ImageView id="rating_1" class="ratingstars"/>
+								<ImageView id="rating_2" class="ratingstars"/>
+								<ImageView id="rating_3" class="ratingstars"/>
+								<ImageView id="rating_4" class="ratingstars"/>
+								<ImageView id="rating_5" class="ratingstars"/>
 							</View>
 						</View>
-						<Label id = "name" text="Post.name"/>
+						<Label id = "name"/>
 					</View>
 
 				</View>
 				<View id="middleWrapper">
 					<View class="post_icons_container first" >
 						<Label class="post_icon" id="cat_icon"/>
-						<Label class="btn_text" id="category" text ="Post.categoria"/>
+						<Label class="btn_text" id="category"/>
 					</View>
 					<View class="post_icons_container">
 						<Label class="post_icon" id="tag_icon"/>
-						<Label class="btn_text" id="tags" text="Post.tag"/>
+						<Label class="btn_text" id="tags"/>
 					</View>
 					<View class="post_icons_container">
 						<Label class="post_icon" id="stories_icon"/>
