--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -1,6 +1,6 @@
 <Alloy>
 
-	<Window id="win" title="Dettaglio Post" class="container" onOpen="openEvent" onPostlayout="addPostImage">
+	<Window id="win" title="Dettaglio Post" class="container" onOpen="openEvent">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
