--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -1,15 +1,16 @@
 <Alloy>
 
 	<!--<Collection src = "events" id="subsetEvents" instance="true"/>-->
-	<Window id="win" class="container" title = "Diario" onOpen="openEvent" onAndroid:back="manageClose">
+	<!--onAndroid:back="manageClose"-->
+	<Window id="win" class="container" title = "Diario" onOpen="openEvent">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
 
 			<!-- Cannot specify node text.  Use attributes only. -->
-			<MenuItem id="mn_picture" title="TakeAPicture" onClick="takePicture"/>
-			<MenuItem id="mn_notify" title="Notifiche"/>
-			<MenuItem id="mn_search" title="Immagine"/>
+			<!--<MenuItem id="mn_picture" title="TakeAPicture" onClick="takePicture"/>-->
+			<!--MenuItem id="mn_notify" title="Notifiche"/>-->
+			<!--<MenuItem id="mn_search" title="Immagine"/>-->
 			<MenuItem id="mn_logout" title="Logout" onClick="f_logout"/>
 			<!--<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />-->
 		</Menu>
