--- a/app/views/addLink.xml
+++ b/app/views/addLink.xml
@@ -1,23 +1,20 @@
 <Alloy>
-	<Window id="window" class="container" title = "Nuovo Link">
-		<Menu id="menu" platform="android">
-			
-			<MenuItem id="salva" title="Scrivi" icon="/images/785-floppy-disk.png"  onClick="createProtoObj" showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />
-			
-		</Menu>
+	<Window id="win" class="container" title = "Nuovo Link">
 
+		<Menu id="menu" platform="android" onHomeIconItemSelected="homeIconSelected">
+			<MenuItem id="mn_salva" onClick="saveLink"/>
+		</Menu>
 		<TableView id="newLinkTable">
-			
+
 			<TableViewRow class="row">
-				<TextField id="titolo"/>				
+				<View class="rowWrapper">
+					<TextField id="titolo"/>
+				</View>
 			</TableViewRow>
-			
 			<TableViewRow class="row">
-				<TextField id="descrizione"/>
-			</TableViewRow>
-			
-			<TableViewRow class="row">
-				<TextField id="content"/>
+				<View class="rowWrapper">
+					<TextField id="link"/>
+				</View>
 			</TableViewRow>
 
 		</TableView>
