--- a/app/views/briefEvento.xml
+++ b/app/views/briefEvento.xml
@@ -3,6 +3,7 @@
 	<View class="aspectEventContainer">
 
 		<!--<Label class="separator"/>-->
+		<View class="separator"/>
 		<Label id="eventIcon" class="aspectEventIcon"/>
 		<TableView id="aspectEventTable" dataCollection="aspettoEvento"  dataFunction="syncAspects" dataTransform="transformData">
 
