--- a/app/views/addDocument.xml
+++ b/app/views/addDocument.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="win" class="container" title = "Nuovo Documento" onOpen="openEvent" onClose="resetGlobals">
+	<Window id="win" class="container" windowSoftInputMode="Ti.UI.Android.SOFT_INPUT_ADJUST_PAN" title = "Nuovo Documento" onOpen="openEvent" onClose="resetGlobals">
 
 		<Menu id="menu" platform="android" onHomeIconItemSelected="homeIconSelected">
 
