--- a/app/views/addLink.xml
+++ b/app/views/addLink.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="win" class="container" title = "Nuovo Link">
+	<Window id="win" class="container" windowSoftInputMode="Ti.UI.Android.SOFT_INPUT_ADJUST_PAN" title = "Nuovo Link">
 
 		<Menu id="menu" platform="android" onHomeIconItemSelected="homeIconSelected">
 			<MenuItem id="mn_salva" onClick="saveLink"/>
